--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "postcss-scss": "3.0.4",
     "prettier": "^2.1.2",
     "protractor": "~7.0.0",
-    "tailwindcss": "1.9.6",
+    "tailwindcss": "^2.1.2",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
